partners div alignment corrected

--- a/src/styles/partners.scss
+++ b/src/styles/partners.scss
@@ -6,15 +6,16 @@
   }
 
   &-stack {
+    width: 90%;
     margin-top: 2rem;
     &-card {
-      box-shadow: 0 4px 8px 0 rgba(33, 42, 57, 0.15);
-      border-radius: 8px;
+      box-shadow: 0 0.5rem 1rem 0 rgba(33, 42, 57, 0.15);
+      border-radius: 0.5rem;
       transition: 0.3s;
       width: $partner-card-width;
       height: $partner-card-height;
       &:hover {
-        box-shadow: 0 4px 16px 0 rgba(33, 42, 57, 0.15);
+        box-shadow: 0 0.75rem 1.5rem 0 rgba(33, 42, 57, 0.15);
       }
 
       &-1 {
